homework_08/docs/javadocresults.txt
CircleSolver.java:26: warning: no description for @throws
      * @throws IOException
        ^
CircleSolver.java:27: error: reference not found
      * @throws exception when radius is negative.                                        **/
        ^
